--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -4,7 +4,7 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-job:
+jobs:
   build: 
     runs-on: ubuntu-latest
     steps:
