--- a/server/package.json
+++ b/server/package.json
@@ -53,6 +53,7 @@
     "safer-buffer": "^2.1.2",
     "send": "^0.17.2",
     "serve-static": "^1.14.2",
+    "serverless-http": "^3.2.0",
     "setprototypeof": "^1.2.0",
     "statuses": "^1.5.0",
     "toidentifier": "^1.0.1",
@@ -65,7 +66,7 @@
     "test": "jest",
     "test-watch": "jest --watchAll",
     "watch": "nodemon src/server.js",
-    "start": "node src/server.js",
+
     "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
