--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "watch": "npm run server & npm run client",
     "deploy": "npm run build --prefix client",
     "deploy-cluster": "npm run build --prefix client && npm run cluster --prefix server",
-    "test": "npm test --prefix server && npm test --prefix client"
+    "test": "npm test --prefix server && npm test --prefix client",
+    "vercel-build": "npm run deploy"
   },
   "keywords": [],
   "author": "",
