--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "deploy": "npm run build --prefix client",
     "deploy-cluster": "npm run build --prefix client && npm run cluster --prefix server",
     "test": "npm test --prefix server && npm test --prefix client",
-    "vercel-build": "npm run deploy"
+    "vercel-build": "npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
