--- a/server/package.json
+++ b/server/package.json
@@ -66,7 +66,7 @@
     "test": "jest",
     "test-watch": "jest --watchAll",
     "watch": "nodemon src/server.js",
-
+    "start": "node src/server.js",
     "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
