Fix mongodb .env

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=8000
-MONGO_URL=mongodb+srv://nasa-api:6d385DjQxMbosskm@nasa-project-cluster.elm20.mongodb.net/nasa?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://nasa-api:6d385DjQxMbosskm@cluster0.elm20.mongodb.net/nasa?retryWrites=true&w=majority
