--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
-	"version": 2,
-	"rewrites": [{ "source": "/(.*)", "destination": "/server/src/app.js" }]
+  "version": 2,
+  "builds": [
+    {
+      "src": "server/src/app.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "server/src/app.js"
+    }
+  ]
 }
