Add /nasa-api in html and package.json to resolve the root of the project as from /nasa-api/

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nasa-project",
   "version": "1.0.0",
   "description": "",
+  "homepage": "/nasa-api",
   "main": "index.js",
   "scripts": {
     "install-server": "npm install --prefix server",
